refactor: 정책 리스트 조회 로직 리팩토링 및 N+1 방지 최적화
- User 객체 제거 및 찜 여부 조회 최적화 (N+1 방지)
- 정책 정렬 기준 `sortOrder` 적용
- `@EntityGraph`로 `region` 즉시 로딩 처리
- display 최대값 제한 `@Max(50)`으로 in-memory 페이징 방지